--- a/views/index.html
+++ b/views/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="public/libs/dist/css/mobile-angular-ui-hover.css" />
     <link rel="stylesheet" href="public/libs/dist/css/mobile-angular-ui-base.css" />
     <link rel="stylesheet" href="public/libs/dist/css/mobile-angular-ui-desktop.css" />
-    <link rel="stylesheet" href="public/demo.css"/>
+    <link rel="stylesheet" href="public/theme/css/style.css"/>
 
     <script src="public/libs/angular/angular.js"></script>
     <script src="public/libs/angular/angular-route.js"></script>
     <script src="public/libs/angular/angular-touch.js"></script>
     <script src="public/libs/dist/js/mobile-angular-ui.js"></script>
-    <script src="public/demo.js"></script>
+    <script src="public/javascript/app.js"></script>
 </head>
 
 
