--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
     <script src="public/libs/angular/angular-route.js"></script>
     <script src="public/libs/angular/angular-touch.js"></script>
     <script src="public/libs/dist/js/mobile-angular-ui.js"></script>
-    <script src="public/javascript/app.js"></script>
+    <script src="public/javascript/app/app.js"></script>
 </head>
 
 
